--- a/src/output.css
+++ b/src/output.css
@@ -650,10 +650,6 @@ video {
   z-index: 50;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
 .col-span-full {
   grid-column: 1 / -1;
 }
@@ -739,8 +735,8 @@ video {
   height: 33.333333%;
 }
 
-.h-1\/4 {
-  height: 25%;
+.h-1\/5 {
+  height: 20%;
 }
 
 .h-14 {
@@ -761,10 +757,6 @@ video {
 
 .h-4\/5 {
   height: 80%;
-}
-
-.h-96 {
-  height: 24rem;
 }
 
 .h-\[30\%\] {
@@ -792,10 +784,6 @@ video {
   height: 100vh;
 }
 
-.h-1\/5 {
-  height: 20%;
-}
-
 .max-h-fit {
   max-height: -moz-fit-content;
   max-height: fit-content;
@@ -803,10 +791,6 @@ video {
 
 .w-1\/3 {
   width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
 }
 
 .w-2\/3 {
@@ -861,11 +845,6 @@ video {
   width: 70%;
 }
 
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
 .w-full {
   width: 100%;
 }
@@ -874,16 +853,8 @@ video {
   width: 100vw;
 }
 
-.max-w-full {
-  max-width: 100%;
-}
-
 .flex-none {
   flex: none;
-}
-
-.flex-shrink-0 {
-  flex-shrink: 0;
 }
 
 .translate-x-1\/2 {
@@ -1105,14 +1076,13 @@ video {
   background-color: rgb(213 212 208 / var(--tw-bg-opacity));
 }
 
+.bg-modal-color {
+  background-color: #00000080;
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1125,21 +1095,13 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-modal-color {
-  background-color: #00000080;
-}
-
-.bg-beige-color {
+.bg-blue-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(182 148 84 / var(--tw-bg-opacity));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
-}
-
-.bg-opacity-70 {
-  --tw-bg-opacity: 0.7;
 }
 
 .from-important-black-color {
@@ -1172,6 +1134,10 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-1 {
@@ -1411,14 +1377,6 @@ video {
   accent-color: #F3F1EE;
 }
 
-.opacity-10 {
-  opacity: 0.1;
-}
-
-.opacity-100 {
-  opacity: 1;
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1471,6 +1429,10 @@ video {
 }
 
 @media (min-width: 425px) {
+  .xs\:w-4\/5 {
+    width: 80%;
+  }
+
   .xs\:justify-between {
     justify-content: space-between;
   }
@@ -1571,8 +1533,16 @@ video {
     width: 75%;
   }
 
+  .md\:w-3\/5 {
+    width: 60%;
+  }
+
   .md\:w-4\/5 {
     width: 80%;
+  }
+
+  .md\:w-\[30\%\] {
+    width: 30%;
   }
 
   .md\:w-\[48\%\] {
@@ -1581,11 +1551,6 @@ video {
 
   .md\:w-\[90\%\] {
     width: 90%;
-  }
-
-  .md\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
   }
 
   .md\:w-full {
@@ -1608,6 +1573,10 @@ video {
     justify-content: space-between;
   }
 
+  .md\:gap-8 {
+    gap: 2rem;
+  }
+
   .md\:gap-y-0 {
     row-gap: 0px;
   }
@@ -1620,10 +1589,6 @@ video {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
-  }
-
-  .md\:overflow-x-scroll {
-    overflow-x: scroll;
   }
 
   .md\:rounded-none {
@@ -1642,6 +1607,11 @@ video {
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:pb-0 {
@@ -1671,8 +1641,16 @@ video {
     height: 40%;
   }
 
+  .lg\:h-96 {
+    height: 24rem;
+  }
+
   .lg\:h-full {
     height: 100%;
+  }
+
+  .lg\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .lg\:w-2\/5 {
@@ -1683,8 +1661,17 @@ video {
     width: 75%;
   }
 
+  .lg\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .lg\:justify-between {
@@ -1696,12 +1683,29 @@ video {
          column-gap: 5rem;
   }
 
+  .lg\:gap-y-0 {
+    row-gap: 0px;
+  }
+
+  .lg\:overflow-x-scroll {
+    overflow-x: scroll;
+  }
+
+  .lg\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .lg\:pt-20 {
     padding-top: 5rem;
   }
 }
 
 @media (min-width: 1280px) {
+  .xl\:fixed {
+    position: fixed;
+  }
+
   .xl\:top-48 {
     top: 12rem;
   }
@@ -1711,12 +1715,21 @@ video {
     margin-bottom: 1rem;
   }
 
+  .xl\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .xl\:mb-6 {
     margin-bottom: 1.5rem;
   }
 
   .xl\:mt-6 {
     margin-top: 1.5rem;
+  }
+
+  .xl\:h-\[15\%\] {
+    height: 15%;
   }
 
   .xl\:h-\[38\%\] {
@@ -1735,14 +1748,6 @@ video {
     height: 100%;
   }
 
-  .xl\:h-1\/4 {
-    height: 25%;
-  }
-
-  .xl\:h-\[15\%\] {
-    height: 15%;
-  }
-
   .xl\:w-1\/2 {
     width: 50%;
   }
@@ -1753,6 +1758,10 @@ video {
 
   .xl\:w-2\/3 {
     width: 66.666667%;
+  }
+
+  .xl\:w-2\/5 {
+    width: 40%;
   }
 
   .xl\:w-3\/4 {
@@ -1769,6 +1778,11 @@ video {
 
   .xl\:w-\[70\%\] {
     width: 70%;
+  }
+
+  .xl\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .xl\:w-full {
@@ -1809,6 +1823,31 @@ video {
     padding-right: 5rem;
   }
 
+  .xl\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .xl\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .xl\:py-2\.5 {
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
+  }
+
+  .xl\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .xl\:py-1\.5 {
+    padding-top: 0.375rem;
+    padding-bottom: 0.375rem;
+  }
+
   .xl\:pl-36 {
     padding-left: 9rem;
   }
@@ -1818,8 +1857,21 @@ video {
     line-height: 2.25rem;
   }
 
+  .xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .xl\:text-\[10px\] {
     font-size: 10px;
+  }
+
+  .xl\:text-\[12px\] {
+    font-size: 12px;
+  }
+
+  .xl\:text-\[14px\] {
+    font-size: 14px;
   }
 
   .xl\:text-\[22px\] {
@@ -1830,17 +1882,24 @@ video {
     font-size: 28px;
   }
 
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .xl\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
   }
 
-  .xl\:text-\[12px\] {
-    font-size: 12px;
+  .xl\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
-  .xl\:text-\[14px\] {
-    font-size: 14px;
+  .xl\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -1878,8 +1937,8 @@ video {
     margin-top: 3.5rem;
   }
 
-  .fullHd\:mt-6 {
-    margin-top: 1.5rem;
+  .fullHd\:ml-8 {
+    margin-left: 2rem;
   }
 
   .fullHd\:h-3\/4 {
@@ -1914,8 +1973,44 @@ video {
     height: 800px;
   }
 
+  .fullHd\:h-\[95\%\] {
+    height: 95%;
+  }
+
   .fullHd\:h-full {
     height: 100%;
+  }
+
+  .fullHd\:h-\[10\%\] {
+    height: 10%;
+  }
+
+  .fullHd\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .fullHd\:h-\[90\%\] {
+    height: 90%;
+  }
+
+  .fullHd\:h-\[70\%\] {
+    height: 70%;
+  }
+
+  .fullHd\:h-4\/5 {
+    height: 80%;
+  }
+
+  .fullHd\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .fullHd\:h-\[82\%\] {
+    height: 82%;
+  }
+
+  .fullHd\:h-\[85\%\] {
+    height: 85%;
   }
 
   .fullHd\:w-2\/3 {
@@ -1932,6 +2027,10 @@ video {
 
   .fullHd\:w-\[232px\] {
     width: 232px;
+  }
+
+  .fullHd\:w-\[32\%\] {
+    width: 32%;
   }
 
   .fullHd\:w-\[45\%\] {
@@ -1962,13 +2061,24 @@ video {
     width: 95%;
   }
 
-  .fullHd\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-
   .fullHd\:w-full {
     width: 100%;
+  }
+
+  .fullHd\:w-3\/4 {
+    width: 75%;
+  }
+
+  .fullHd\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .fullHd\:w-\[65\%\] {
+    width: 65%;
+  }
+
+  .fullHd\:max-w-full {
+    max-width: 100%;
   }
 
   .fullHd\:flex-shrink-0 {
@@ -2034,8 +2144,24 @@ video {
     margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
   }
 
+  .fullHd\:space-y-10 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+  }
+
+  .fullHd\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .fullHd\:p-0 {
     padding: 0px;
+  }
+
+  .fullHd\:p-16 {
+    padding: 4rem;
   }
 
   .fullHd\:p-\[10px\] {
@@ -2077,6 +2203,11 @@ video {
     padding-bottom: 0.5rem;
   }
 
+  .fullHd\:py-2\.5 {
+    padding-top: 0.625rem;
+    padding-bottom: 0.625rem;
+  }
+
   .fullHd\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
@@ -2085,6 +2216,21 @@ video {
   .fullHd\:py-9 {
     padding-top: 2.25rem;
     padding-bottom: 2.25rem;
+  }
+
+  .fullHd\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .fullHd\:py-16 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .fullHd\:py-\[9px\] {
+    padding-top: 9px;
+    padding-bottom: 9px;
   }
 
   .fullHd\:pb-4 {
@@ -2105,6 +2251,14 @@ video {
 
   .fullHd\:pt-4 {
     padding-top: 1rem;
+  }
+
+  .fullHd\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .fullHd\:pr-20 {
+    padding-right: 5rem;
   }
 
   .fullHd\:text-\[14px\] {
@@ -2159,6 +2313,22 @@ video {
 }
 
 @media (min-width: 2560px) {
+  .ultraQ\:flex {
+    display: flex;
+  }
+
+  .ultraQ\:h-3\/4 {
+    height: 75%;
+  }
+
+  .ultraQ\:h-2\/3 {
+    height: 66.666667%;
+  }
+
+  .ultraQ\:h-4\/5 {
+    height: 80%;
+  }
+
   .ultraQ\:w-1\/4 {
     width: 25%;
   }
@@ -2169,5 +2339,26 @@ video {
 
   .ultraQ\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .ultraQ\:w-1\/2 {
+    width: 50%;
+  }
+
+  .ultraQ\:w-2\/5 {
+    width: 40%;
+  }
+
+  .ultraQ\:justify-center {
+    justify-content: center;
+  }
+
+  .ultraQ\:p-0 {
+    padding: 0px;
+  }
+
+  .ultraQ\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
