Fixed Phone res Carrousel Image position issue

--- a/src/output.css
+++ b/src/output.css
@@ -1545,6 +1545,10 @@ video {
     width: 80%;
   }
 
+  .xs\:items-center {
+    align-items: center;
+  }
+
   .xs\:justify-between {
     justify-content: space-between;
   }
@@ -1707,6 +1711,10 @@ video {
 
   .md\:items-start {
     align-items: flex-start;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:justify-between {
